cabal-version:      3.0
name:               bull
version:            0.1.0.0
synopsis:           Bitcoin
license:            BSD-2-Clause
license-file:       LICENSE
author:             dopamane
maintainer:         dwc1295@gmail.com
copyright:          (c) David Cox
category:           Crypto
build-type:         Simple
extra-doc-files:    CHANGELOG.md

library
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   lib
  exposed-modules:
    Bull
    Bull.Cli
    Bull.Client
    Bull.Message
    Bull.Message.CompactSize
    Bull.Message.Version
    Bull.Pretty
  build-depends:
    async,
    base,
    binary,
    bytestring,
    iproute,
    network,
    network-run,
    optparse-applicative,
    prettyprinter,
    SHA,
    stm,
    unix,

executable bull
  default-language: Haskell2010
  ghc-options:      -Wall -O2 -threaded
  hs-source-dirs:   exe
  main-is:          Main.hs
  build-depends:
    base,
    bull

test-suite test
  default-language: Haskell2010
  ghc-options:      -Wall -O2 -threaded
  hs-source-dirs:   test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:
    base,
    bull
