cabal-version:      3.0
name:               bull
version:            0.1.0.0
synopsis:           Bitcoin
license:            BSD-2-Clause
license-file:       LICENSE
author:             dopamane
maintainer:         dwc1295@gmail.com
copyright:          (c) David Cox
category:           Crypto
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                    README.md

library
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   lib
  exposed-modules:
    Bull
    Bull.Cli
    Bull.Client
    Bull.Conn
    Bull.Daemon
    Bull.Log
    Bull.Message
    Bull.Message.Addr
    Bull.Message.CompactSize
    Bull.Message.Header
    Bull.Message.Inventory
    Bull.Message.Version
    Bull.Net
    Bull.Pool
    Bull.Pretty
    Bull.Server
  build-depends:
    async,
    base,
    binary,
    bytestring,
    hashable,
    iproute,
    network,
    network-run,
    optparse-applicative,
    prettyprinter,
    SHA,
    stm,
    unix,
    unordered-containers,

executable bull
  default-language: Haskell2010
  ghc-options:      -Wall -O2 -threaded
  hs-source-dirs:   exe
  main-is:          Main.hs
  build-depends:
    base,
    bull

test-suite test
  default-language: Haskell2010
  ghc-options:      -Wall -O2 -threaded
  hs-source-dirs:   test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Test.Bull
    Test.Bull.Message
    Test.Bull.Message.Addr
    Test.Bull.Message.CompactSize
  build-depends:
    base,
    binary,
    bull,
    bytestring,
    hedgehog,
    tasty,
    tasty-hedgehog,
    tasty-hunit
